# PySpectrometer2

./: pyproject.toml
pyspectrometer2/: PySpectrometer2-Picam2-v1.0.py  specFunctions.py
