[project]
name = "pyspectrometer2"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Stefan Boca", email = "stefan.r.boca@gmail.com" }]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "opencv-python>=4.9.0.80",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pyspectrometer2"]
